syntax = "proto3";

package polygon;

option go_package = "../polygon;polygon";


service PolygonService {
  rpc CalculateArea (PolygonRequest) returns (PolygonResponse);
}

message Point {
  double x = 1;
  double y = 2;
}

message PolygonRequest {
  repeated Point points = 1;
}

message PolygonResponse {
  double area = 1;
}
